--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,92 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
 canvas {
     position: absolute;
+    border: 2px solid #fff;
+    z-index: 1000;
+}
+.row-outer{
+    z-index: -1;
+}
+.wrapper{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    overflow: hidden;
+    
+}
+.shape:nth-of-type(1){
+    width: 400px;
+    height: 400px;
+    background: linear-gradient(64deg, #f34868 23%, #f24768 23%, #9e00ec 80%);
+    animation: wave 8s ease-in-out infinite;
+}
+.shape:nth-of-type(2){
+    width: 800px;
+    height: 800px;
+    background: #7998ff;
+    position: absolute;
+    top: -200px;
+    left: -400px;
+    opacity: .2;
+    z-index: -1;
+    animation: wave 8s ease-in-out infinite;
+}
+.shape:nth-of-type(3){
+    width: 500px;
+    height: 500px;
+    background: #379eff;
+    position: absolute;
+    bottom: -25%;
+    right: -5%;
+    opacity: .3;
+    z-index: -1;
+    animation: wave 10s ease-in-out infinite;
+}
+.shape:nth-of-type(4){
+    width: 250px;
+    height: 250px;
+    background: #fbff0d;
+    position: absolute;
+    bottom: -120px;
+    left: -50%;
+    opacity: .4;
+    z-index: -1;
+    animation: wave 8s ease-in-out infinite;
+}
+.shape:nth-of-type(5){
+    width: 350px;
+    height: 350px;
+    background: #ff4343;
+    position: absolute;
+    top: -8%;
+    right: 10%;
+    opacity: .2;
+    z-index: -1;
+    animation: wave 6s ease-in-out infinite;
+}
+.shape:nth-of-type(6){
+    width: 100px;
+    height: 100px;
+    background: #a002e8;
+    position: absolute;
+    top: 10%;
+    right: 45%;
+    opacity: .2;
+    z-index: -1;
+    animation: wave 6s ease-in-out infinite;
+    transform: rotate(90deg);
+}
+@keyframes wave{
+    0%, 100%{
+        border-radius:  66% 34% 37% 63% / 57% 31% 69% 43%;
+    }
+    60%{
+        border-radius: 25% 75% 50% 50% / 25% 50% 45% 80%;
+    }
 }
